BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_AccTrxnToHNSProduct__c.object
<CustomObject>
    <fields>
        <fullName>HSvc_AccountTransaction__c</fullName>
        <label>Account Transaction</label>
        <referenceTo>HSvc_AccountTransactionCodeMaster__c</referenceTo>
        <relationshipLabel>Account Transaction To HNS Products</relationshipLabel>
        <relationshipName>Account_Transaction_To_HNS_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HSvc_ActiveFormula__c</fullName>
        <formula>AND(
  HSvc_Expiry_Date__c &gt;= TODAY(),
  HSvc_Effective_Date__c &lt;= TODAY()

)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_HNSProduct__c</fullName>
        <label>HNS Product</label>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>Account Transaction To HNS Products</relationshipLabel>
        <relationshipName>Account_Transaction_To_HNS_Products</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Account Transaction To HNS Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HSvc_AccountTransaction__c</columns>
        <columns>HSvc_HNSProduct__c</columns>
        <columns>HSvc_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ATHP-{0000}</displayFormat>
        <label>Account Transaction To HNS Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Transaction To HNS Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetInThePast</fullName>
        <active>true</active>
        <errorConditionFormula>OR( HSvc_Expiry_Date__c &lt; TODAY(), HSvc_Expiry_Date__c&lt; HSvc_Effective_Date__c)</errorConditionFormula>
        <errorDisplayField>HSvc_Expiry_Date__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>